--- a/index.html
+++ b/index.html
@@ -15,18 +15,57 @@
   </style>
 </head>
 <body>
+  <main>
+    <div class="card">
+      <!-- <img
+  src="images/image-product-mobile.jpg"
+  alt="Clock"
+  srcset="images/image-product-mobile.jpg 200w, images/image-product-desktop.jpg 400w"
+  sizes="(max-width: 600px) 200px, 50vw" /> -->
 
-  Preview
+  <picture>
+    <source 
+      srcset="images/image-product-desktop.jpg"
+      media="(min-width: 50rem)"
+    />
+    <!-- <source 
+      srcset="images/image-product-mobile.jpg"
+      media="(max-width: 50rem)"
+    /> -->
+    <img 
+      src="images/image-product-mobile.jpg" 
+      alt="Product image"
+    />
+  </picture>
+      <div class="card-content">
+        <h4>Perfume</h4>
 
-  Gabrielle Essence Eau De Parfum
+  <h1>Gabrielle Essence Eau De Parfum</h1>
 
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
+  <p>
+    A floral, solar and voluptuous interpretation composed by Olivier Polge,
+    Perfumer-Creator for the House of CHANEL.
+  </p>
 
-  $149.99
-  $169.99
+  <dl>
+    <dd class="price reduced">
+      <var title="currency">$</var>
+      <span>149.99</span>
+      </dd>
+      <dd  class="price original">
+        <var title="currency">$</var>
+        <span>169.99</span>
+      </dd>
+  </dl>
 
-  Add to Cart
+  <button>
+    <svg width="15" height="16" xmlns="http://www.w3.org/2000/svg"><path d="M14.383 10.388a2.397 2.397 0 0 0-1.518-2.222l1.494-5.593a.8.8 0 0 0-.144-.695.8.8 0 0 0-.631-.28H2.637L2.373.591A.8.8 0 0 0 1.598 0H0v1.598h.983l1.982 7.4a.8.8 0 0 0 .799.59h8.222a.8.8 0 0 1 0 1.599H1.598a.8.8 0 1 0 0 1.598h.943a2.397 2.397 0 1 0 4.507 0h1.885a2.397 2.397 0 1 0 4.331-.376 2.397 2.397 0 0 0 1.12-2.021ZM11.26 7.99H4.395L3.068 3.196h9.477L11.26 7.991Zm-6.465 6.392a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Zm6.393 0a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Z" fill="#FFF"/></svg>
+    <span>Add to Cart</span>
+  </button>
+      </div>
+      
+    </div>
+  </main>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
