--- a/index.html
+++ b/index.html
@@ -47,12 +47,10 @@
 
           <dl>
             <dd>
-              <var title="currency">$</var>
-              <span>149.99</span>
+              <div><var title="currency">$</var> <span>149.99</span></div>
             </dd>
             <dd>
-              <var title="currency">$</var>
-              <span>169.99</span>
+              <div><var title="currency">$</var> <span>169.99</span></div>
             </dd>
           </dl>
 
