--- a/index.html
+++ b/index.html
@@ -45,14 +45,16 @@
             Polge, Perfumer-Creator for the House of CHANEL.
           </p>
 
-          <dl>
-            <dd>
-              <div><var title="currency">$</var> <span>149.99</span></div>
-            </dd>
-            <dd>
-              <div><var title="currency">$</var> <span>169.99</span></div>
-            </dd>
-          </dl>
+          <ul>
+            <li>
+              <var title="currency">$</var>
+              <span>149.99</span>
+            </li>
+            <li>
+              <var title="currency">$</var>
+              <span>169.99</span>
+            </li>
+          </ul>
 
           <button>
             <svg width="15" height="16" xmlns="http://www.w3.org/2000/svg">
